--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,22 @@ jobs:
                 tags: amanlalwani/wallet-app:latest
             
             - name: Verify Pushed Image
-              run: docker pull amanlalwani/wallet-app:latest    
+              run: docker pull amanlalwani/wallet-app:latest
+              
+            - name: Deploy to EC2
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{secrets.SSH_HOST}}
+                username: ${{secrets.SSH_HOST}}
+                key: ${{secrets.SSH_KEY}}
+                script: |
+                  sudo docker pull amanlalwani/wallet-app:latest
+                  sudo docker stop wallet-app || true
+                  sudo docker rm wallet-app || true
+                  sudo docker run -d --name wallet-app -p 3005:3000 amanlalwani/wallet-app:latest
+
+
+
             
               
 
