--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,16 @@ jobs:
 
     - name: Prepare Dockerfile
       run: cp ./docker/Dockerfile.user ./Dockerfile
-
+    
+    - name: Prepare env file
+      run: echo ${{secrets.USER_APP_ENV}} > ./apps/user-app/.env
+      
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
 
     - name: Build and Push Docker image
       uses: docker/build-push-action@v2
