--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
       run: cp ./docker/Dockerfile.user ./Dockerfile
     
     - name: Prepare env file
-      run: echo ${{secrets.USER_APP_ENV}} > ./apps/user-app/.env
-      
+      run: echo '${{secrets.USER_APP_ENV}}' > ./apps/user-app/.env
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
