--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       run: cp ./docker/Dockerfile.user ./Dockerfile
     
     - name: Prepare env file
-      run: echo 'NEXTAUTH_URL=${{secrets.NEXTAUTH_URL}}' >> ./apps/user-app/.env && echo 'NEXT_PUBLIC_SECRET=${{secrets.NEXT_PUBLIC_SECRET}}' >> ./apps/user-app/.env && echo 'NEXT_PUBLIC_HELLO=${{secrets.HELLO}}' >> ./apps/user-app/.env
+      run: echo 'NEXTAUTH_URL=${{secrets.NEXTAUTH_URL}}' >> ./apps/user-app/.env && echo 'NEXT_PUBLIC_SECRET=${{secrets.NEXT_PUBLIC_SECRET}}' >> ./apps/user-app/.env && echo 'NEXT_PUBLIC_HELLO=${{secrets.HELLO}}' >> ./apps/user-app/.env && echo 'DATABASE_URL=${{secrets.DATABASE_URL}}' >> ./packages/db/.env
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
